<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges = "false"
    android:id="@+id/coordinator_layout"
    tools:context=".Activity.DetailMoviesActivity">
    <!--layout top, wrapper of image-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <!--collapsing toolbar layout-->
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">
            <!--image banner-->
            <ImageView
                android:id="@+id/image_view_pannel"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>
        <!--end collapsing-->
    </android.support.design.widget.AppBarLayout>
    <!--end layout top-->

    <!--layout bellow-->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_sscroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--card view-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--text view playlist name-->
                <TextView
                    android:id="@+id/text_view_playlist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:padding="12dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--image crate date-->
                    <ImageView
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_clock"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <!--text view create date-->
                    <TextView
                        android:id="@+id/text_view_create_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="9"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <!--text view derectors-->
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:padding="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/derectors"/>
                    <TextView
                        android:padding="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_derectors"/>
                </LinearLayout>
                <!--text view category-->
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:padding="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/category"/>
                    <TextView
                        android:padding="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_category"/>
                </LinearLayout>
                <!--text view description-->
               <LinearLayout
                   android:padding="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:padding="5dp"
                       android:textSize="14sp"
                       android:textColor="@color/colorPrimaryText"
                       android:layout_width="90dp"
                       android:layout_height="wrap_content"
                       android:text="@string/description"/>
                   <TextView
                       android:padding="5dp"
                       android:id="@+id/text_view_content"
                       android:textSize="14sp"
                       android:textAlignment="inherit"
                       android:textColor="@color/colorPrimaryText"
                       android:lineSpacingMultiplier="1.5"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
               </LinearLayout>

                <Button
                    android:id="@+id/button_watch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch_now"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--end card view-->
    </android.support.v4.widget.NestedScrollView>
    <!--end layout bellow-->

    <!--floating button, like button-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_add_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fav"
        app:elevation="6dp"
        android:visibility="gone"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp" />
</android.support.design.widget.CoordinatorLayout>
